# cman-spider

./: .gitignore  README.md  config.py  main.py  modrinth_fetcher.py  pyproject.toml  utils.py
models/: cman_index.py  modrinth.py
